--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "my top secret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-ST8GU2J;Initial Catalog=MovieDatabase;Integrated Security=True;TrustServerCertificate=True;"
   },
